--- a/public/01-about.html
+++ b/public/01-about.html
@@ -178,24 +178,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="catalog-dd">
-					<div class="container">
-						<div class="catalog-dd__row tabs">
-							<div class="catalog-dd__caption-col col-lg-3 tabs__caption">
-								<div class="tabs__btn active"></div>
-								<div class="tabs__btn"></div>
-								<div class="tabs__btn"></div>
-								<div class="tabs__btn"></div>
-							</div>
-							<div class="col-lg tabs__wrap">
-								<div class="tabs__content active"></div>
-								<div class="tabs__content"></div>
-								<div class="tabs__content"></div>
-								<div class="tabs__content"></div>
-							</div>
-						</div>
-					</div>
-				</div>
+				<!--+catalogDD()-->
 			</header>
 			<!-- end header-->
 			<!-- start sAbout-->
