--- a/public/013-vacancy.html
+++ b/public/013-vacancy.html
@@ -88,9 +88,7 @@
 							<div class="top-nav__logo-col col-auto"><a class="top-nav__logo" href="/"><img loading="lazy" src="img/svg/logo.svg" alt=""/></a>
 							</div>
 							<div class="col-auto d-none d-sm-block">
-								<button class="top-nav__catalog-btn" type="button">
-									<div class="top-nav__c-img"><img loading="lazy" src="img/svg/catalog.svg" alt=""/>
-									</div><span>Каталог</span>
+								<button class="top-nav__catalog-btn" type="button"><span class="top-nav__c-img"><img loading="lazy" src="img/svg/catalog.svg" alt=""/></span><span>Каталог</span>
 								</button>
 							</div>
 							<div class="col">
@@ -193,7 +191,7 @@
 				</div>
 			</div>
 			<!-- start sVacancy-->
-			<section class="sVacancy section" id="sVacancy">
+			<div class="sVacancy section" id="sVacancy">
 				<div class="container">
 					<div class="sVacancy__row row">
 						<div class="col">
@@ -299,41 +297,34 @@
 						<div class="sVacancy__filter-col col-lg-4 col-xl-3">
 							<div class="sVacancy__filter">
 								<label class="sVacancy__label">
-									<input class="invisible" type="radio" name="sVacancy-filter" val="Все вакансии" checked="checked"/>
-									<div class="sVacancy__txt">Все вакансии</div>
+									<input class="invisible" type="radio" name="sVacancy-filter" value="Все вакансии" checked="checked"/><span class="sVacancy__txt">Все вакансии</span>
 								</label>
 								<label class="sVacancy__label">
-									<input class="invisible" type="radio" name="sVacancy-filter" val="Административный персонал"/>
-									<div class="sVacancy__txt">Административный персонал</div>
+									<input class="invisible" type="radio" name="sVacancy-filter" value="Административный персонал"/><span class="sVacancy__txt">Административный персонал</span>
 								</label>
 								<label class="sVacancy__label">
-									<input class="invisible" type="radio" name="sVacancy-filter" val="Бухгалтерия, управленческий учет и пр."/>
-									<div class="sVacancy__txt">Бухгалтерия, управленческий учет и пр.</div>
+									<input class="invisible" type="radio" name="sVacancy-filter" value="Бухгалтерия, управленческий учет и пр."/><span class="sVacancy__txt">Бухгалтерия, управленческий учет и пр.</span>
 								</label>
 								<label class="sVacancy__label">
-									<input class="invisible" type="radio" name="sVacancy-filter" val="Высший менеджмент"/>
-									<div class="sVacancy__txt">Высший менеджмент</div>
+									<input class="invisible" type="radio" name="sVacancy-filter" value="Высший менеджмент"/><span class="sVacancy__txt">Высший менеджмент</span>
 								</label>
 								<label class="sVacancy__label">
-									<input class="invisible" type="radio" name="sVacancy-filter" val="Закупки"/>
-									<div class="sVacancy__txt">Закупки</div>
+									<input class="invisible" type="radio" name="sVacancy-filter" value="Закупки"/><span class="sVacancy__txt">Закупки</span>
 								</label>
 								<label class="sVacancy__label">
-									<input class="invisible" type="radio" name="sVacancy-filter" val="Интернет-магазин"/>
-									<div class="sVacancy__txt">Интернет-магазин</div>
+									<input class="invisible" type="radio" name="sVacancy-filter" value="Интернет-магазин"/><span class="sVacancy__txt">Интернет-магазин</span>
 								</label>
 								<label class="sVacancy__label">
-									<input class="invisible" type="radio" name="sVacancy-filter" val="Логистика"/>
-									<div class="sVacancy__txt">Логистика</div>
+									<input class="invisible" type="radio" name="sVacancy-filter" value="Логистика"/><span class="sVacancy__txt">Логистика</span>
 								</label>
 							</div>
 						</div>
 					</div>
 				</div>
-			</section>
+			</div>
 			<!-- end sVacancy-->
 			<!-- start sForm-->
-			<section class="sForm sForm--alt section" id="sForm">
+			<section class="sForm sForm--alt section">
 				<div class="container">
 					<div class="sForm__box sForm__box--alt">
 						<div class="sForm__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
