--- a/public/02-colaboration.html
+++ b/public/02-colaboration.html
@@ -88,9 +88,7 @@
 							<div class="top-nav__logo-col col-auto"><a class="top-nav__logo" href="/"><img loading="lazy" src="img/svg/logo.svg" alt=""/></a>
 							</div>
 							<div class="col-auto d-none d-sm-block">
-								<button class="top-nav__catalog-btn" type="button">
-									<div class="top-nav__c-img"><img loading="lazy" src="img/svg/catalog.svg" alt=""/>
-									</div><span>Каталог</span>
+								<button class="top-nav__catalog-btn" type="button"><span class="top-nav__c-img"><img loading="lazy" src="img/svg/catalog.svg" alt=""/></span><span>Каталог</span>
 								</button>
 							</div>
 							<div class="col">
@@ -225,7 +223,7 @@
 			</div>
 			<!-- end sColaboration-->
 			<!-- start sForm-->
-			<section class="sForm sForm--alt section" id="sForm">
+			<section class="sForm sForm--alt section">
 				<div class="container">
 					<div class="sForm__box sForm__box--alt">
 						<div class="sForm__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
