--- a/public/index.html
+++ b/public/index.html
@@ -88,9 +88,7 @@
 							<div class="top-nav__logo-col col-auto"><a class="top-nav__logo" href="/"><img loading="lazy" src="img/svg/logo.svg" alt=""/></a>
 							</div>
 							<div class="col-auto d-none d-sm-block">
-								<button class="top-nav__catalog-btn" type="button">
-									<div class="top-nav__c-img"><img loading="lazy" src="img/svg/catalog.svg" alt=""/>
-									</div><span>Каталог</span>
+								<button class="top-nav__catalog-btn" type="button"><span class="top-nav__c-img"><img loading="lazy" src="img/svg/catalog.svg" alt=""/></span><span>Каталог</span>
 								</button>
 							</div>
 							<div class="col">
@@ -950,9 +948,7 @@
 						</div>
 					</div>
 					<div class="sNew__baners-row row">
-						<div class="col-xl-7"><a class="sNew__baner" href="#"><span class="sNew__b-img"><img loading="lazy" src="img/@2x/sNew-baner-1.png" alt=""/></span><span class="sNew__content">
-							<h2>Покупай в кредит</h2>
-							<p>технику для малого бизнеса</p><span class="sNew__btn">Узнать подробнее</span></span></a>
+						<div class="col-xl-7"><a class="sNew__baner" href="#"><span class="sNew__b-img"><img loading="lazy" src="img/@2x/sNew-baner-1.png" alt=""/></span><span class="sNew__content"><span class="sNew__b-title">Покупай в кредит</span><span class="sNew__c-descr">технику для малого бизнеса</span><span class="sNew__btn">Узнать подробнее</span></span></a>
 						</div>
 						<div class="col-xl-5"><a class="sNew__baner" href="#"><span class="sNew__b-img"><img loading="lazy" src="img/@2x/sNew-baner-2.png" alt=""/></span><span class="sNew__txt-box text-end"><span class="sNew__title"><span class="text-primary">-15%</span>
 							на все чайники Morphy richards</span><span class="sNew__price-box"><span class="sNew__price sNew__price--old">8 990 руб.</span><span class="sNew__price sNew__price--new">6 990 руб.</span></span></span></a>
