--- a/public/01-about.html
+++ b/public/01-about.html
@@ -88,9 +88,7 @@
 							<div class="top-nav__logo-col col-auto"><a class="top-nav__logo" href="/"><img loading="lazy" src="img/svg/logo.svg" alt=""/></a>
 							</div>
 							<div class="col-auto d-none d-sm-block">
-								<button class="top-nav__catalog-btn" type="button">
-									<div class="top-nav__c-img"><img loading="lazy" src="img/svg/catalog.svg" alt=""/>
-									</div><span>Каталог</span>
+								<button class="top-nav__catalog-btn" type="button"><span class="top-nav__c-img"><img loading="lazy" src="img/svg/catalog.svg" alt=""/></span><span>Каталог</span>
 								</button>
 							</div>
 							<div class="col">
@@ -343,7 +341,7 @@
 			</section>
 			<!-- end sIcons-->
 			<!-- start sForm-->
-			<section class="sForm section" id="sForm">
+			<section class="sForm section">
 				<div class="container">
 					<div class="sForm__box">
 						<div class="sForm__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
