made more fixes

--- a/public/index.html
+++ b/public/index.html
@@ -1726,35 +1726,35 @@
 						<h2>Популярные подборки<br/>бытовой техники</h2>
 					</div>
 					<div class="sTags__row row sTags-row-js justify-content-center">
-						<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемая техника</a>
+						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемая техника</a>
 						</div>
-						<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Варочные панели</a>
+						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Варочные панели</a>
 						</div>
-						<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Варочные панели домино</a>
+						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Варочные панели домино</a>
 						</div>
-						<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемая комбинированная панель</a>
+						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемая комбинированная панель</a>
 						</div>
-						<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые газовые панели</a>
+						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые газовые панели</a>
 						</div>
-						<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые индукционные панели</a>
+						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые индукционные панели</a>
 						</div>
-						<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые электрические панели</a>
+						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые электрические панели</a>
 						</div>
-						<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемая техника</a>
+						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемая техника</a>
 						</div>
-						<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Варочные панели</a>
+						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Варочные панели</a>
 						</div>
-						<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Варочные панели домино</a>
+						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Варочные панели домино</a>
 						</div>
-						<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемая комбинированная панель</a>
+						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемая комбинированная панель</a>
 						</div>
-						<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые газовые панели</a>
+						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые газовые панели</a>
 						</div>
-						<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые индукционные панели</a>
+						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые индукционные панели</a>
 						</div>
-						<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые электрические панели</a>
+						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые электрические панели</a>
 						</div>
-						<div class="col-auto d-block">
+						<div class="col-sm-auto d-block">
 							<div class="sTags__btn sTags__btn--toggle sTags-btn-js"><span>Показать все</span><span>Скрыть</span>
 							</div>
 						</div>
