--- a/public/01-about.html
+++ b/public/01-about.html
@@ -44,7 +44,7 @@
 								<div class="location">
 									<svg class="icon icon-location ">
 										<use xlink:href="img/svg/sprite.svg#location"></use>
-									</svg><span>null</span>
+									</svg><span class="d-none d-lg-inline-block">Комсомольск-на-Амуре</span>
 								</div>
 							</div>
 							<div class="col d-none d-xl-block">
@@ -95,7 +95,7 @@
 								<div class="location">
 									<svg class="icon icon-location ">
 										<use xlink:href="img/svg/sprite.svg#location"></use>
-									</svg><span>null</span>
+									</svg><span class="d-none d-lg-inline-block">Комсомольск-на-Амуре</span>
 								</div>
 							</div>
 							<div class="col-auto d-xl-none">
