--- a/public/015-filtr-2.html
+++ b/public/015-filtr-2.html
@@ -44,7 +44,7 @@
 								<div class="location">
 									<svg class="icon icon-location ">
 										<use xlink:href="img/svg/sprite.svg#location"></use>
-									</svg><span>null</span>
+									</svg><span class="d-none d-lg-inline-block">Комсомольск-на-Амуре</span>
 								</div>
 							</div>
 							<div class="col d-none d-xl-block">
@@ -95,7 +95,7 @@
 								<div class="location">
 									<svg class="icon icon-location ">
 										<use xlink:href="img/svg/sprite.svg#location"></use>
-									</svg><span>null</span>
+									</svg><span class="d-none d-lg-inline-block">Комсомольск-на-Амуре</span>
 								</div>
 							</div>
 							<div class="col-auto d-xl-none">
@@ -917,7 +917,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -940,7 +940,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -963,7 +963,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -986,7 +986,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1009,7 +1009,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1032,7 +1032,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1055,7 +1055,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1078,7 +1078,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1101,7 +1101,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1124,7 +1124,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1147,7 +1147,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1170,7 +1170,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1193,7 +1193,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1216,7 +1216,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1239,7 +1239,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1262,7 +1262,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
