--- a/public/015-filtr.html
+++ b/public/015-filtr.html
@@ -44,7 +44,7 @@
 								<div class="location">
 									<svg class="icon icon-location ">
 										<use xlink:href="img/svg/sprite.svg#location"></use>
-									</svg><span>null</span>
+									</svg><span class="d-none d-lg-inline-block">Комсомольск-на-Амуре</span>
 								</div>
 							</div>
 							<div class="col d-none d-xl-block">
@@ -95,7 +95,7 @@
 								<div class="location">
 									<svg class="icon icon-location ">
 										<use xlink:href="img/svg/sprite.svg#location"></use>
-									</svg><span>null</span>
+									</svg><span class="d-none d-lg-inline-block">Комсомольск-на-Амуре</span>
 								</div>
 							</div>
 							<div class="col-auto d-xl-none">
@@ -925,7 +925,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -948,7 +948,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -971,7 +971,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -994,7 +994,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1017,7 +1017,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1040,7 +1040,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1063,7 +1063,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1086,7 +1086,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1109,7 +1109,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1132,7 +1132,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1155,7 +1155,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1178,7 +1178,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1201,7 +1201,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1224,7 +1224,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1247,7 +1247,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
@@ -1270,7 +1270,7 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn link-modal-js" href="#modal-callback">
+												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
 													<svg class="icon icon-plus ">
 														<use xlink:href="img/svg/sprite.svg#plus"></use>
 													</svg></a>
