--- a/public/014-prod-card.html
+++ b/public/014-prod-card.html
@@ -570,7 +570,16 @@
 							</div>
 							<div class="col-auto"><a class="tags-row__tag" href="#"><span class="tags-row__icon"><img loading="lazy" src="img/svg/t-compare.svg" alt=""/></span><span>Сравнить</span></a>
 							</div>
-							<div class="col-auto"><a class="tags-row__tag" href="#"><span class="tags-row__icon"><img loading="lazy" src="img/svg/t-share.svg" alt=""/></span><span>Поделиться</span></a>
+							<div class="col-auto">
+								<div class="tags-row__tag tags-row__tag--share">
+									<div class="tags-row__share-toggle">
+										<div class="tags-row__icon"><img loading="lazy" src="img/svg/t-share.svg" alt=""/>
+										</div><span>Поделиться</span>
+									</div>
+									<div class="tags-row__share-dropdown"><script src="https://yastatic.net/share2/share.js"></script>
+<div class="ya-share2" data-curtain data-shape="round" data-services="messenger,vkontakte,facebook,odnoklassniki"></div>
+									</div>
+								</div>
 							</div>
 						</div>
 						<div class="sProdCard__t-row row">
