--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
-		<link type="image/ico" href="img/favicon.ico" rel="shortcut icon"><meta name="format-detection" content="telephone=no"> <link rel="preconnect" href="https://fonts.googleapis.com">
+		<link type="image/ico" href="img/favicon.ico" rel="shortcut icon"><meta name="format-detection" content="telephone=no"> 
+		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/><link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="libs/ion-rangeslider/css/ion.rangeSlider.min.css"/>
@@ -2360,6 +2361,35 @@
 								<use xlink:href="img/svg/sprite.svg#plus"></use>
 							</svg>
 						</div><span>показать все города</span>
+					</div>
+				</form>
+			</div>
+		</div>
+		<div class="modal-address" id="modal-address" style="display: none">
+			<div class="form-wrap">
+				<form>
+					<label class="form-wrap__name-label"><span class="form-wrap__input-title">Название</span><input class="form-wrap__name-inp form-control" type="text" value="Моя дача"/>
+					</label>
+					<div class="form-wrap__inp-row row">
+						<div class="col-sm-12">
+							<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Улица"/>
+							</div>
+							<!-- +e.input-wrap-->
+						</div>
+						<div class="col-sm-6">
+							<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Дом, корпус"/>
+							</div>
+							<!-- +e.input-wrap-->
+						</div>
+						<div class="col-sm-6">
+							<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Квартира"/>
+							</div>
+							<!-- +e.input-wrap-->
+						</div>
+						<div class="col-12">
+							<button class="form-wrap__btn" type="submit">Сохранить данные
+							</button>
+						</div>
 					</div>
 				</form>
 			</div>
